missing buildscript pieces